# routing-app

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  streamlit_app.py  test_bench.py  theme.py
.streamlit/: config.toml
assets/: global.css
assets/Time_In_Store_Estimation/World_Countries_Generalized_Shapefile/: World_Countries_Generalized.dbf  World_Countries_Generalized.shp.xml
db/: db_operations.py  projects.py  roles.py  scenarios.py
pages/: 1_instructions.py  2_projects.py  3_add_manage_stores.py  4_default_input_parameters.py  5_add_manage_scenarios.py  6_scenario_comparison.py  7_documentation.py
params/: regionalization.py  time_allocation.py
session/: session.py
utils/: Time_In_Store_Estimate.py  card.py  data_loaders.py  dataframe_utils.py  date_utils.py  dialogs.py  fleet_optimization.py  models_common.py  regionalization.py  styles.py  week_distribution.py
utils/auth_utils/: auth.py  guards.py
views/: scenarios.py
views/scenarios_/: fleet_opt_results.py  regionalization_results.py  scenario_comparison.py  week_distr_results.py
